@@ -1,5 +1,12 @@
 2013-06-04  Manjunath Matti <mmatti@caviumnetworks.com>
 
+	2012-11-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* asan.c (instrument_builtin_call) <case BUILT_IN_BCOPY>: Fix up
+	dest assignment.
+
+2013-06-04  Manjunath Matti <mmatti@caviumnetworks.com>
+
 	2012-11-12  David Edelsohn  <dje.gcc@gmail.com>
 
 	* asan.c: Include tm_p.h
